--- a/src/client/pages/home-page/styles.module.scss
+++ b/src/client/pages/home-page/styles.module.scss
@@ -99,6 +99,9 @@
   background-color: #1B1B1B;
 }
 
+.bgOverlaySchema {
+}
+
 .progressBar {
   position: fixed;
   left: 0;
